fixed text-align bug

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ table{
 td{
   font-size: 30px;
   font-family: Inkredible, Helvetica, Verdana, Sans-Serif;
+  text-align:center;
 }
 tr{
   width:120px;
